# persona-switcher-mcp

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
personas/: .gitkeep  example.md  refinegpt.md
src/: __init__.py  config.py  errors.py  persona_manager.py  server.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_persona_manager.py  test_server.py  test_validators.py
tests/fixtures/: invalid-yaml.md  missing-fields.md  valid-persona.md
